# Firecrawl

./: .gitignore  1_firecrawl.ipynb  Installing_and_Running_Ollama.sh  README.md  pyproject.toml
1_Build_a_Chat_with_website_using_Groq_Llama3/: chat_with_website.py
2_Structured_Outputs_and_JSON_Strict_Mode/: OpenAI_Structured_Outputs_and_JSON_Strict_Mode.py
